--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "build": "npm run minify-js && npm run minify-css",
         "start": "wp-scripts start",
-        "minify-js": "uglifyjs build/index.js -o inc/assets/scripts.min.js",
-        "minify-css": "cleancss build/style-index.css -o inc/assets/style.min.css",
+        "minify-js": "uglifyjs build/index.js -o inc/assets/js/scripts.min.js",
+        "minify-css": "cleancss build/style-index.css -o inc/assets/css/style.min.css",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
@@ -20,6 +20,7 @@
     },
     "devDependencies": {
         "clean-css-cli": "^5.6.2",
-        "uglify-js": "^3.17.4"
+        "uglify-js": "^3.17.4",
+        "webpack": "^5.88.2"
     }
 }
