--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "author": "Caio Nunes",
     "license": "LGPL-3.0-or-later",
     "dependencies": {
-        "@wordpress/scripts": "*"
+        "@wordpress/scripts": "*",
+        "basicscroll": "^3.0.4"
     },
     "devDependencies": {
         "clean-css-cli": "^5.6.2",
