--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "npm run minify-js && npm run minify-css",
         "start": "wp-scripts start",
         "minify-js": "uglifyjs build/index.js -o assets/min/app.min.js",
-        "minify-css": "cleancss build/style-index.css -o assets/min/styles.min.css",
+        "minify-css": "cleancss build/index.css -o assets/min/styles.min.css",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
